[UI Fix] Removed overlapping / extra border color and box shadow on the biz card view.

--- a/sugarcrm/styleguide/less/clients/sugarone/sugarone-specific/misc.less
+++ b/sugarcrm/styleguide/less/clients/sugarone/sugarone-specific/misc.less
@@ -6,6 +6,10 @@
     border: none;
 }
 
+.span8 .headerpane {
+  border-right: none; 
+}
+
 .label-module-mini {
     line-height: 16px;
 }
